# winzy-outlook-meetings

./: README.md  pyproject.toml
tests/: test_winzy_outlook_meetings.py
winzy_outlook_meetings/: __init__.py  app.py
